packages/core/src/editor/Block.css
/*
BASIC STYLES
*/

.bn-block-outer {
  line-height: 1.5;
  transition: margin 0.2s;
}

/*Ensures blocks & block content spans editor width*/
.bn-block {
  display: flex;
  flex-direction: column;
}

.bn-block-content {
  padding: 3px 0;
  display: flex;
  transition: font-size 0.2s;
  width: 100%;
}

.bn-block-content.ProseMirror-selectednode > *,
/* Case for node view renderers */
.ProseMirror-selectednode > .bn-block-content > * {
  border-radius: 4px;
  outline: 4px solid rgb(100, 160, 255);
}

.bn-block-content::before {
  content: "";
  margin-right: 0;
  transition: all 0.2s;
  /* Workaround for selection issue on Chrome, see #1588 and also here:
  https://discuss.prosemirror.net/t/mouse-down-selection-behaviour-different-on-chrome/8426
  The :before element causes the selection to be set in the wrong place vs 
  other browsers. Setting no height fixes this, while list item indicators are 
  still displayed fine as overflow is not hidden. */
  height: 0;
  overflow: visible;
}

.bn-inline-content {
  width: 100%;
}

/*
NESTED BLOCKS
*/

.bn-block-group .bn-block-group {
  margin-left: 24px;
}

.bn-block-group .bn-block-group > .bn-block-outer {
  position: relative;
}

.bn-block-group
  .bn-block-group
  > .bn-block-outer:not([data-prev-depth-changed])::before {
  content: " ";
  display: inline;
  position: absolute;
  left: -20px;
  height: 100%;
  transition: all 0.2s 0.1s;
}

.bn-block-group
  .bn-block-group
  > .bn-block-outer[data-prev-depth-change="-2"]::before {
  height: 0;
}

.bn-inline-content code {
  font-family: monospace;
}

/* NESTED BLOCK ANIMATIONS (change in indent) */

[data-prev-depth-change="1"] {
  --x: 1;
}
[data-prev-depth-change="2"] {
  --x: 2;
}
[data-prev-depth-change="3"] {
  --x: 3;
}
[data-prev-depth-change="4"] {
  --x: 4;
}
[data-prev-depth-change="5"] {
  --x: 5;
}

[data-prev-depth-change="-1"] {
  --x: -1;
}
[data-prev-depth-change="-2"] {
  --x: -2;
}
[data-prev-depth-change="-3"] {
  --x: -3;
}
[data-prev-depth-change="-4"] {
  --x: -4;
}
[data-prev-depth-change="-5"] {
  --x: -5;
}

.bn-block-outer[data-prev-depth-change] {
  margin-left: calc(10px * var(--x));
}

.bn-block-outer[data-prev-depth-change]
  .bn-block-outer[data-prev-depth-change] {
  margin-left: 0;
}

/* HEADINGS*/
[data-content-type="heading"] {
  --level: 3em;
}
[data-content-type="heading"][data-level="2"] {
  --level: 2em;
}
[data-content-type="heading"][data-level="3"] {
  --level: 1.3em;
}
[data-content-type="heading"][data-level="4"] {
  --level: 1em;
}
[data-content-type="heading"][data-level="5"] {
  --level: 0.9em;
}
[data-content-type="heading"][data-level="6"] {
  --level: 0.8em;
}

[data-prev-level="1"] {
  --prev-level: 3em;
}
[data-prev-level="2"] {
  --prev-level: 2em;
}
[data-prev-level="3"] {
  --prev-level: 1.3em;
}
[data-prev-level="4"] {
  --prev-level: 1em;
}
[data-prev-level="5"] {
  --prev-level: 0.9em;
}
[data-prev-level="6"] {
  --prev-level: 0.8em;
}

.bn-block-outer[data-prev-type="heading"] > .bn-block > .bn-block-content {
  font-size: var(--prev-level);
  font-weight: bold;
}

.bn-block-outer:not([data-prev-type])
  > .bn-block
  > .bn-block-content[data-content-type="heading"],
.bn-block-outer:not([data-prev-type])
  > .bn-block
  > div[data-type="modification"]
  > div[data-type="modification"]
  > .bn-block-content[data-content-type="heading"] {
  font-size: var(--level);
  font-weight: bold;
}

/* QUOTES */
[data-content-type="quote"] blockquote {
  border-left: 2px solid rgb(125, 121, 122);
  color: rgb(125, 121, 122);
  margin: 0;
  padding-left: 1em;
}

/* DIVIDERS */
[data-content-type="divider"] hr {
  border: none;
  border-top: 1px solid rgb(125, 121, 122);
  margin: 0.5em 0;
  flex: 1;
}

/* LISTS */

.bn-block-content::before {
  margin-right: 0;
  content: "";
}

/* Ordered */
.bn-block-content[data-content-type="numberedListItem"]::before {
  display: flex;
  justify-content: center;
  min-width: 24px;
  padding-right: 4px;
}

[data-content-type="numberedListItem"] {
  --index: attr(data-index);
}

[data-prev-type="numberedListItem"] {
  --prev-index: attr(data-prev-index);
}

.bn-block-outer[data-prev-type="numberedListItem"]:not([data-prev-index="none"])
  > .bn-block
  > .bn-block-content::before {
  content: var(--prev-index) ".";
}

.bn-block-outer:not([data-prev-type])
  > .bn-block
  > .bn-block-content[data-content-type="numberedListItem"]::before,
.bn-block-outer:not([data-prev-type])
  > .bn-block
  > div[data-type="modification"]
  > .bn-block-content[data-content-type="numberedListItem"]::before {
  content: var(--index) ".";
}

/* Unordered */
.bn-block-content[data-content-type="bulletListItem"]::before {
  display: flex;
  justify-content: center;
  min-width: 24px;
  padding-right: 4px;
}

/* Checked */
.bn-block-content[data-content-type="checkListItem"] > div:has(> input) {
  height: 24px;
}

.bn-block-content[data-content-type="checkListItem"] > div > input {
  cursor: pointer;
  height: 24px;
  margin-left: 4px;
  margin-right: 8px;
  margin-block: 0;
  width: 12px;
}

.bn-block-content[data-content-type="checkListItem"][data-checked="true"]
  .bn-inline-content {
  text-decoration: line-through;
}

.bn-block-content[data-text-alignment="center"] {
  justify-content: center;
}

.bn-block-content[data-text-alignment="right"] {
  justify-content: flex-end;
}

/* Toggle */
.bn-block:has(
    > .bn-block-content > div > .bn-toggle-wrapper[data-show-children="false"]
  )
  > .bn-block-group,
.bn-block:has(
    > .react-renderer
      > .bn-block-content
      > div
      > .bn-toggle-wrapper[data-show-children="false"]
  )
  > .bn-block-group {
  display: none;
}

.bn-toggle-wrapper {
  display: flex;
  align-items: center;
}

.bn-toggle-button {
  color: var(--bn-colors-editor-text);
  padding: 3px;
}

.bn-toggle-button > svg {
  width: 18px;
  height: 18px;
}

.bn-toggle-wrapper[data-show-children="true"] .bn-toggle-button {
  transform: rotate(90deg);
}
/* ... */

